white space fix

--- a/src/stylesheets/6-templates/_home.scss
+++ b/src/stylesheets/6-templates/_home.scss
@@ -4,6 +4,7 @@
 
 .do-body-container{
     padding-bottom: 100px;
+    overflow: hidden;
 }
 /* CSS for Steps */
 .do-steps-container{
